--- a/data/templates/real.html
+++ b/data/templates/real.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="fonts/Barlow/stylesheet.css" />
 <style>
   html,
   body {
@@ -28,23 +29,23 @@
   /* ============ */
 
   :root {
-    /* --color-sheet: #FDFDFD;
+    --color-sheet: #FDFDFD;
     --color-alt: #F7F7F7;
     --color-text: #000000;
     --color-border: #D7D8D8;
-    --color-meta: #929292; */
+    --color-meta: #929292;
 
-    --color-sheet: #090A0A;
+    /* --color-sheet: #090A0A;
     --color-alt: #0D0E0E;
     --color-text: #FFFFFF;
     --color-border: #222323;
-    --color-meta: #4C4D4E;
+    --color-meta: #4C4D4E; */
   }
 
   body {
-    font-family: sans-serif;
     background-color: var(--color-sheet);
     color: var(--color-text);
+    font-family: 'Barlow';
   }
 
   table,
