--- a/data/templates/table.html
+++ b/data/templates/table.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="{{ASSET_ROOT | safe}}/fonts/Barlow/stylesheet.css" />
 <style>
   html,
   body {
@@ -12,74 +11,8 @@
     width: 100%;
     max-width: none;
   }
-
-  th, td {
-    width: 1px;
-    white-space: nowrap;
-  }
-
-  td:last-child {
-    width: 100%;
-  }
-
-  td, th {
-    text-align: left;
-  }
-
-  /* ============ */
-
-  :root {
-     /* --color-sheet: #FDFDFD;
-    --color-alt: #F7F7F7;
-    --color-text: #000000;
-    --color-border: #D7D8D8;
-    --color-meta: #929292; */
-
-    --color-sheet: #090A0A;
-    --color-alt: #0D0E0E;
-    --color-text: #FFFFFF;
-    --color-border: #222323;
-    --color-meta: #4C4D4E;
-  }
-
-  body {
-    background-color: var(--color-sheet);
-    color: var(--color-text);
-    /* font-family: 'Barlow'; */
-    font-family: 'Fira Code';
-    font-weight: 400;
-  }
-
-  table,
-  th,
-  td {
-    border-collapse: collapse;
-  }
-
-  th {
-    font-weight: 600;
-
-    border-color: var(--color-border);
-    border-style: solid;
-    border-width: 0;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-
-  }
-  td, th {
-    padding: 12px 16px;
-  }
-
-  tr:nth-child(2n) {
-    background-color: var(--color-alt);
-  }
-
-  .meta-val {
-    color: var(--color-meta);
-    font-style: italic;
-  }
-
 </style>
+<link rel="stylesheet" href="{{THEMES_DIR | safe}}/{{theme | safe}}.css" />
 <body>
 <table>
   <tr>
@@ -98,4 +31,3 @@
 </table>
 </body>
 </html>
-
