--- a/themes/default-dark.css
+++ b/themes/default-dark.css
@@ -2,9 +2,9 @@
 @import url("./default-common.css");
 
 :root {
-  --color-sheet: #FDFDFD;
-  --color-alt: #F7F7F7;
-  --color-text: #000000;
-  --color-border: #D7D8D8;
-  --color-meta: #929292;
+  --color-sheet: #090A0A;
+  --color-alt: #0D0E0E;
+  --color-text: #FFFFFF;
+  --color-border: #222323;
+  --color-meta: #4C4D4E;
 }
