--- a/themes/default-common.css
+++ b/themes/default-common.css
@@ -1,4 +1,4 @@
-@import url("fonts/Barlow/stylesheet.css");
+/*@import url("fonts/Barlow/stylesheet.css");*/
 @import url("fonts/FiraCode/stylesheet.css");
 
 html,
