--- a/data/templates/table.html
+++ b/data/templates/table.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
-<style>
-  html,
-  body {
-    padding: 0px;
-    margin: 0px;
-  }
-
-  table {
-    width: 100%;
-    max-width: none;
-  }
-</style>
-<link rel="stylesheet" href="{{THEMES_DIR | safe}}/{{theme | safe}}.css" />
+<head>
+  <link rel="stylesheet" href="{{THEMES_DIR | safe}}/{{theme | safe}}.css" />
+</head>
 <body>
-<table>
-  <tr>
-    {% for header in headers -%}
-      <th>{{header}}</th>
-    {% endfor -%}
-  </tr>
 
-  {% for row in rows -%}
-  <tr>
-    {% for cell in row -%}
-      <td {% if cell.is_null %}class="meta-val"{% endif %} >
-        {{cell.value}}
-      </td>
+  <pre><code id="code" class="language-sql">SELECT
+  ename,
+  sal,
+  sal + comm as "total salary",
+  sal * 1.25 as "new salary",
+  sal * 1.25 - sal as "bonus",
+  sal * 2 as "more bonus"
+FROM
+  emp</code></pre>
+
+  <table>
+    <tr>
+      {% for header in headers -%}
+        <th>{{header}}</th>
+      {% endfor -%}
+    </tr>
+
+    {% for row in rows -%}
+    <tr>
+      {% for cell in row -%}
+        <td {% if cell.is_null %}class="meta-val"{% endif %} >
+          {{cell.value}}
+        </td>
+      {% endfor -%}
+    </tr>
     {% endfor -%}
-  </tr>
-  {% endfor -%}
-</table>
+  </table>
+
+  <script src="{{DATA_DIR | safe}}/js/highlight.min.js"></script>
+  <script src="{{DATA_DIR | safe}}/js/sql.min.js"></script>
+
+  <script>
+    hljs.highlightAll();
+  </script>
+  
 </body>
 </html>
